# super_native_extensions

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  check_precompiled.sh  melos.yaml  pubspec.yaml  update_cargokit.sh  update_toolbox.sh  update_version.sh
.github/workflows/: check_and_lint.yml  precompile_binaries.yml
super_clipboard/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
super_clipboard/example/: .metadata  pubspec.yaml
super_clipboard/example/android/: build.gradle  gradle.properties  settings.gradle
super_clipboard/example/lib/: main.dart  widget_for_reader.dart
super_clipboard/example/test/: widget_test.dart
super_clipboard/example/web/: index.html  manifest.json
super_clipboard/lib/: super_clipboard.dart  super_clipboard_internal.dart
super_clipboard/lib/src/: clipboard.dart  common.dart  encoded_data.dart  events.dart  format.dart  format_conversions.dart  formats.dart  formats_base.dart  future_util.dart  keys.dart  keys_internal.dart  platform.dart  reader.dart  reader_internal.dart  reader_model.dart  reader_value.dart  reader_value_delegate.dart  standard_formats.dart  system_clipboard.dart  types.dart  types_internal.dart  util.dart  writer.dart  writer_data_provider.dart
super_clipboard/test/: super_clipboard_test.dart
super_context_menu/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
super_context_menu/example/: .metadata  pubspec.yaml
super_context_menu/example/android/: build.gradle
super_context_menu/example/lib/: main.dart
super_context_menu/lib/: super_context_menu.dart
super_context_menu/lib/src/: desktop.dart  menu.dart  (+3 more)
super_data_transfer/: README.md  pubspec.yaml
super_data_transfer/android/: build.gradle  settings.gradle
super_data_transfer/example/: README.md  pubspec.yaml
super_data_transfer/ios/: super_data_transfer.podspec
super_data_transfer/lib/: super_data_transfer_web.dart
super_data_transfer/linux/: CMakeLists.txt  super_data_transfer_plugin.cc
super_data_transfer/macos/: super_data_transfer.podspec
super_data_transfer/rust/: Cargo.toml  symbols.txt
super_data_transfer/windows/: CMakeLists.txt  super_data_transfer_plugin.cpp  super_data_transfer_plugin.h  super_data_transfer_plugin_c_api.cpp
super_drag_and_drop/: .flutter-plugins  .flutter-plugins-dependencies  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
super_drag_and_drop/example/: .metadata  pubspec.yaml
super_drag_and_drop/lib/: super_drag_and_drop.dart
super_drag_and_drop/test/: super_drag_and_drop_test.dart
super_hot_key/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
super_hot_key/lib/: super_hot_key.dart
super_keyboard_layout/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
super_keyboard_layout/example/: .metadata  pubspec.yaml
super_keyboard_layout/lib/: super_keyboard_layout.dart
super_keyboard_layout/test/: super_keyboard_layout_test.dart
super_native_extensions/: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
super_native_extensions/android/: build.gradle  settings.gradle
super_native_extensions/ios/: super_data_transfer.podspec  super_native_extensions.podspec
super_native_extensions/lib/: raw_clipboard.dart  raw_drag_drop.dart  raw_hot_key.dart  raw_keyboard_layout.dart  raw_menu.dart  super_data_transfer.dart  super_native_extensions_web.dart  widget_snapshot.dart  widget_snapshotter.dart  widgets.dart
super_native_extensions/linux/: CMakeLists.txt  super_native_extensions_plugin.cc
super_native_extensions/macos/: super_native_extensions.podspec
super_native_extensions/rust/: Cargo.toml  build.rs  cargokit.yaml  symbols.txt
super_native_extensions/rust/keyboard_map/: gen_keyboard_map.rs
super_native_extensions/rust/src/: api_model.rs  blur.rs  clipboard_events_manager.rs  clipboard_reader.rs  clipboard_writer.rs  context.rs  data_provider_manager.rs  data_source_manager.rs  drag_drop_manager.rs  drag_manager.rs  drop_manager.rs  error.rs  hot_key_manager.rs  keyboard_layout_manager.rs  lib.rs  log.rs  menu_manager.rs  reader_manager.rs  segmented_queue.rs  shadow.rs  util.rs  value_coerce.rs  value_promise.rs  writer_manager.rs
super_native_extensions/rust/src/android/: clipboard_events.rs  data_provider.rs  data_source.rs  drag.rs  drag_common.rs  drag_drop.rs  drop.rs  hot_key.rs  keyboard_layout.rs  menu.rs  mod.rs  reader.rs  util.rs  writer.rs
super_native_extensions/rust/src/darwin/: common.rs  mod.rs  progress_bridge.rs
super_native_extensions/rust/src/darwin/ios/: alpha_to_path.rs  clipboard_events.rs  data_provider.rs  data_source.rs  drag.rs  drag_common.rs  drop.rs  keyboard_layout.rs  menu.rs  mod.rs  objc_drop_notifier.rs  reader.rs  uikit.rs  util.rs
super_native_extensions/rust/src/darwin/macos/: data_provider.rs  data_source.rs  drag.rs  drag_common.rs  drop.rs  hot_key.rs  hot_key_sys.rs  keyboard_layout.rs  keyboard_layout_sys.rs  menu.rs  mod.rs  reader.rs  util.rs  writer.rs
super_native_extensions/rust/src/ios/: data_source.rs  data_source2.rs  drag.rs  drag_drop.rs  drop.rs  mod.rs  reader.rs  util.rs  writer.rs
super_native_extensions/rust/src/linux/: clipboard_async.rs  common.rs  data_provider.rs  drag.rs  drag_common.rs  drop.rs  keyboard_layout.rs  menu.rs  mod.rs  reader.rs  signal.rs  writer.rs
super_native_extensions/rust/src/macos/: data_source.rs  drag.rs  drag_common.rs  drag_drop.rs  drop.rs  mod.rs  reader.rs  util.rs  writer.rs
super_native_extensions/rust/src/mock/: reader.rs  writer.rs
super_native_extensions/rust/src/win32/: common.rs  data_object.rs  data_provider.rs  data_source.rs  drag.rs  drag_common.rs  drop.rs  hot_key.rs  image_conversion.rs  keyboard_layout.rs  menu.rs  mod.rs  ole_initializer.rs  reader.rs  virtual_file_stream.rs  writer.rs
super_native_extensions/test/: raw_clipboard_test.dart
super_native_extensions/windows/: .clangd  CMakeLists.txt  super_native_extensions_plugin.cpp  super_native_extensions_plugin.h  super_native_extensions_plugin_c_api.cpp
(+249 files in other folders)
