[workspace]

[profile.release]
lto = true
panic = "abort"
strip = true

[package]
name = "super_native_extensions"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2.1"
async-trait = "0.1"

[dependencies.nativeshell_core]
# git = "https://github.com/nativeshell/nativeshell_ng.git"
# rev = "e58cf947f78c1e00ff66bedff6d5b42b3046577d"
path = "../../../rust/nativeshell_ng/core/rust"
features = ["derive"]

[dev-dependencies.nativeshell_core]
# git = "https://github.com/nativeshell/nativeshell_ng.git"
# rev = "e58cf947f78c1e00ff66bedff6d5b42b3046577d"
path = "../../../rust/nativeshell_ng/core/rust"
features = ["derive", "mock"]

[dev-dependencies]
velcro = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
objc = "0.2.7"
once_cell = "1.8.0"
cocoa = "0.24"
block = "0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22.3"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
once_cell = "1.8.0"
android_logger = "0.11"
url = "2.2.2"

[target.'cfg(target_os = "windows")'.dependencies]
byte-slice-cast = "1.2.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "implement",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com_Marshal",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Memory",
]

[target.'cfg(target_os = "linux")'.dependencies]
glib-sys = "0.15.10"
gdk-sys = "0.15.1"
gtk-sys = "0.15.3"
gobject-sys = "0.15.10"
scopeguard = "1.1.0"
