[workspace]

[profile.release]
lto = true
panic = "abort"
# strip = "symbols"

[package]
name = "super_native_extensions"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2.1"
async-trait = "0.1"
rand = "0.8.5"
flutter_engine_context = { path = "../../../flutter/engine_context/rust" }

[build-dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.59"
anyhow = "1.0.41"

[dependencies.nativeshell_core]
version = "0.1.2"
features = ["derive"]

[dev-dependencies.nativeshell_core]
version = "0.1.2"
features = ["derive", "mock"]

[dev-dependencies]
velcro = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
objc = "0.2.7"
once_cell = "1.8.0"
cocoa = "0.24"
block = "0.1.6"
core-graphics = "0.22.3"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
once_cell = "1.8.0"
android_logger = "0.11"
url = "2.2.2"

[target.'cfg(target_os = "windows")'.dependencies]
byte-slice-cast = "1.2.1"
once_cell = "1.8.0"
mime_guess = "2.0.4"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.43.0"
features = [
    "implement",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_Marshal",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "linux")'.dependencies]
glib-sys = "0.15.10"
gdk-sys = "0.15.1"
gtk-sys = "0.15.3"
gobject-sys = "0.15.10"
gdk = "0.15.4"
gtk = { version = "0.15.5", features = ["v3_22"] }
url = "2.2.2"
