[workspace]

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
# strip = "symbols"

[package]
name = "super_native_extensions"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2.1"
async-trait = "0.1"
rand = "0.8.5"
url = "2.2.2"
irondash_engine_context = "0.5.0"
irondash_run_loop = "0.5.0"
irondash_message_channel = { version = "0.7.0", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.59"
anyhow = "1.0.41"

[dev-dependencies]
velcro = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
once_cell = "1.8.0"
core-graphics = "0.22.3"
objc2 = "0.5.2"
block2 = "0.5.1"
objc2-foundation = { version = "0.2.2", features = [
    "block2",
    "dispatch",
    "NSArray",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSFileCoordinator",
    "NSFilePresenter",
    "NSGeometry",
    "NSItemProvider",
    "NSKeyValueObserving",
    "NSObject",
    "NSProcessInfo",
    "NSProgress",
    "NSPropertyList",
    "NSString",
    "NSThread",
    "NSURL",
    "NSValue",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = [
    "block2",
    "NSApplication",
    "NSBitmapImageRep",
    "NSBitmapImageRep",
    "NSCell",
    "NSDragging",
    "NSDraggingItem",
    "NSDraggingSession",
    "NSEvent",
    "NSEvent",
    "NSFilePromiseProvider",
    "NSFilePromiseReceiver",
    "NSGraphicsContext",
    "NSImage",
    "NSImage",
    "NSImageRep",
    "NSMenu",
    "NSMenuItem",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
objc2-ui-kit = { version = "0.2.2", features = [
    "block2",
    "UIAction",
    "UIActivityIndicatorView",
    "UIApplication",
    "UIBezierPath",
    "UIColor",
    "UIContextMenuConfiguration",
    "UIContextMenuInteraction",
    "UIDeferredMenuElement",
    "UIDragInteraction",
    "UIDragItem",
    "UIDragPreview",
    "UIDragPreviewParameters",
    "UIDragSession",
    "UIDropInteraction",
    "UIGestureRecognizer",
    "UIImage",
    "UIImageView",
    "UIInteraction",
    "UIMenu",
    "UIMenuElement",
    "UIPanGestureRecognizer",
    "UIPasteboard",
    "UIPreviewParameters",
    "UIResponder",
    "UITargetedDragPreview",
    "UITargetedPreview",
    "UIView",
    "UIViewController",
] }


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
once_cell = "1.8.0"
android_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
byte-slice-cast = "1.2.1"
once_cell = "1.8.0"
threadpool = "1.8.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
    "implement",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_Marshal",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "linux")'.dependencies]
glib-sys = "0.17.4"
gdk-sys = "0.17.0"
gtk-sys = "0.17.0"
gobject-sys = "0.17.4"
gdk = "0.17.1"
gtk = { version = "0.17.1" }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
mime_guess = "2.0.4"

[patch.crates-io]
# Until the PR gets upstreamed
mime_guess = { git = "https://github.com/knopp/mime_guess.git", branch = "super_native_extensions" }

# irondash_engine_context = { path = "../../../irondash/engine_context/rust" }
# irondash_run_loop = { path = "../../../irondash/run_loop" }
# irondash_message_channel = { path = "../../../irondash/message_channel/rust" }
# irondash_message_channel_derive = { path = "../../../irondash/message_channel/rust_derive" }
# irondash_dart_ffi = { path = "../../../irondash/dart_ffi" }
